# grpc-architecture-demo

./: Cargo.toml  README.md
.cargo/: config.toml
client/: Cargo.toml  README.md  build.rs  pubspec.yaml
client/ios/Runner.xcodeproj/: project.pbxproj
client/src/: main.rs
crates/client/: Cargo.toml  build.rs
crates/client/src/: api.rs  lib.rs  main.rs
crates/client/src/transport/: grpc.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/src/: lib.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: main.rs
ui/: Cargo.toml  build_wasm.sh  pubspec.yaml  target_features_debug.txt
ui/ios/Runner.xcodeproj/: project.pbxproj
ui/lib/: main.dart
ui/native/hub/: Cargo.toml  build.rs
ui/native/hub/src/: lib.rs
ui/native/hub/src/actors/: first.rs  mod.rs
ui/native/hub/src/signals/: mod.rs
ui/web/: index.html
