[package]
# Do not change the name of this crate.
name = "hub"
version = "0.1.0"
edition = "2021" # Changed from 2024 to 2021 for stability

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
wildcard_imports = "deny"

[dependencies]
rinf = { version = "8.7.2", default-features = false }
serde = { version = "1.0", features = ["derive"] }
send_wrapper = { version = "0.6", features = ["futures"] }
async-trait = "0.1"
client = { path = "../../../crates/client" }

# --- DELETE THE SHARED TOKIO DEPENDENCY HERE ---
# We will define it strictly in the target blocks below.

# 1. Web Specifics (WASM)
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4" # <--- ADD THIS
# Force "rt" to be enabled specifically for WASM
tokio = { version = "1", default-features = false, features = ["macros", "sync"] }

# 2. Native Specifics (Mobile/Desktop)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Force full features for Native
tokio = { version = "1", features = ["rt-multi-thread", "time", "fs", "net", "macros", "sync", "rt"] }